<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>io.helidon.applications</groupId>
    <artifactId>helidon-se</artifactId>
    <version>3.0.1</version>
    <relativePath/>
  </parent>

  <groupId>io.alpenglow</groupId>
  <artifactId>io.alpenglow</artifactId>
  <packaging>pom</packaging>
  <version>1.0-SNAPSHOT</version>
  <modules>
    <module>io.alpenglow.quickstart</module>
    <module>io.alpenglow.aws</module>
    <module>io.alpenglow.digitalocean</module>
    <module>io.alpenglow.service</module>
    <module>io.alpenglow.webapp</module>
  </modules>

  <name>Alpenglow</name>

  <properties>
    <encoding>UTF-8</encoding>
    <java.version>17</java.version>
    <mainClass>io.alpenglow.Main</mainClass>
    <mainArgs/>
    <helidon.version>3.0.1</helidon.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>com.pulumi</groupId>
        <artifactId>aws</artifactId>
        <version>5.13.0</version>
      </dependency>
      <dependency>
        <groupId>com.pulumi</groupId>
        <artifactId>digitalocean</artifactId>
        <version>4.15.1</version>
      </dependency>
      <dependency>
        <groupId>io.helidon</groupId>
        <artifactId>helidon-bom</artifactId>
        <version>${helidon.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>com.pulumi</groupId>
      <artifactId>pulumi</artifactId>
      <version>0.5.4</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>${java.version}</release>
          <compilerArgs>--enable-preview</compilerArgs>
          <forceJavacCompilerUse>true</forceJavacCompilerUse>
          <source>${java.version}</source>
          <target>${java.version}</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.2.2</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>${mainClass}</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>${mainClass}</mainClass>
            </manifest>
          </archive>
          <descriptorRefs>
            <descriptorRef>jar-with-dependencies</descriptorRef>
          </descriptorRefs>
        </configuration>
        <executions>
          <execution>
            <id>make-my-jar-with-dependencies</id>
            <phase>package</phase>
            <goals>
              <goal>single</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.0.0</version>
        <configuration>
          <mainClass>${mainClass}</mainClass>
          <commandlineArgs>${mainArgs}</commandlineArgs>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-wrapper-plugin</artifactId>
        <version>3.1.0</version>
        <configuration>
          <mavenVersion>3.8.5</mavenVersion>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
